--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,5 +26,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
     implementation "com.android.support:appcompat-v7:${safeExtGet('supportLibVersion', '26.1.0')}"
-    implementation "com.facebook.react:react-native:+" // From node_modules
+    implementation "com.facebook.react:react-native:${safeExtGet('reactNative','+')}" // From node_modules
 }
